# Flooding

./: .gitignore  config.yaml  environment.yml  pyproject.toml  readme.md  requirements-pip.txt  run_raster_pipeline.py
data/interim/s2_preprocessed/: B03_preprocessed.tif  B08_preprocessed.tif  a_raster_prep_result.yaml
data/output/: cube_stats.yaml  flood_mask_filtered.tif  flood_mask_filtered.tif.aux.xml  flood_mask_raw.tif  ndwi.tif  ndwi.tif.aux.xml  run_log.yaml
outputs/raster/: flood_mask_filtered.tif
outputs/reports/: qc_vector_prep.txt
outputs/vector/: admin_flood_summary.csv  admin_flood_summary.gpkg  admin_units_adm3.gpkg
raster_data/: 2023-09-10-00_00_2023-09-10-23_59_Sentinel-2_L2A_B03_(Raw).tiff.aux.xml  2023-09-10-00_00_2023-09-10-23_59_Sentinel-2_L2A_B08_(Raw).tiff.aux.xml
raster_data/ndwi_time/: 2023-09-10-00_00_2023-09-10-23_59_Sentinel-2_L2A_NDWI.tiff.aux.xml
src/: cube_demo.py  flood_mask.py  ndwi_series.py  raster_prep.py  utils_rasterio.py
src/flood_project/config/: paths.py
src/flood_project/vector/: aggregation.py  aoi.py  cleaning.py  flood_sampling.py  io.py  run_c.py  run_d.py  spatial.py
src/flood_project/viz/: maps.py  plots.py  run_e.py
tests/: test_aoi.py  test_cleaning.py  test_clip.py  test_raster_pipeline.py  test_spatial.py
